All but BuildArea

--- a/Assets/_ChromaCrusade/Scripts/PartImporter/CC.PartImporter.asmdef
+++ b/Assets/_ChromaCrusade/Scripts/PartImporter/CC.PartImporter.asmdef
@@ -6,7 +6,8 @@
         "GUID:3838979ef187a084e82a9bd55d5017c6",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
         "GUID:923bc923fd7c685264fc56fea61f5c24",
-        "GUID:d2ee3845b2dc8fc428a3336e433254bb"
+        "GUID:d2ee3845b2dc8fc428a3336e433254bb",
+        "GUID:5a17536fbcb78d54498c0c16cbc7f0e3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
