--- a/Assets/_ChromaCrusade/Scripts/ShipEditor/Inventory/CC.ShipEditor.Inventory.asmdef
+++ b/Assets/_ChromaCrusade/Scripts/ShipEditor/Inventory/CC.ShipEditor.Inventory.asmdef
@@ -7,7 +7,10 @@
         "GUID:d2ee3845b2dc8fc428a3336e433254bb",
         "GUID:199b28df04ec87c448fb2a39cc36ceca",
         "GUID:c152956743b8dbe49bb7bff605ac8f25",
-        "GUID:6d781a41a8890734b930a2caa24731d7"
+        "GUID:6d781a41a8890734b930a2caa24731d7",
+        "GUID:3838979ef187a084e82a9bd55d5017c6",
+        "GUID:ebfb28c9f5f123c48aebc2feeee43fc4",
+        "GUID:e60ee0dd147f198419a7b3016a0b4b50"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
