--- a/Assets/_ChromaCrusade/Scripts/ShipEditor/Manager/CC.ShipEditor.Manager.asmdef
+++ b/Assets/_ChromaCrusade/Scripts/ShipEditor/Manager/CC.ShipEditor.Manager.asmdef
@@ -4,7 +4,20 @@
     "references": [
         "GUID:fae3a77f89dac3648a16b44ba064a8b4",
         "GUID:bfefc9aef8e33b04fbd8b168d6985215",
-        "GUID:d2ee3845b2dc8fc428a3336e433254bb"
+        "GUID:d2ee3845b2dc8fc428a3336e433254bb",
+        "GUID:cd3f4d5d713e24e4692973de52e49c6f",
+        "GUID:a1fc47236d1b6944e988ddb9c2c22a06",
+        "GUID:4b8a977a6aca79546af1ade1d027b342",
+        "GUID:da089e7eb1f249a4e8f700287ca818f3",
+        "GUID:2844bec5a743f7c43b165bc0feb00ff2",
+        "GUID:035c78fadd13b0b458e6d6939eb4c391",
+        "GUID:e60ee0dd147f198419a7b3016a0b4b50",
+        "GUID:199b28df04ec87c448fb2a39cc36ceca",
+        "GUID:8162417b1db43304a8e519f382de0521",
+        "GUID:3838979ef187a084e82a9bd55d5017c6",
+        "GUID:fd0a12926910c494bb4f6642179608fd",
+        "GUID:34fe253a634d1634896d6e4e0eb910ef",
+        "GUID:de253b478ee584649840e36d6697ae5d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
