--- a/Assets/_ChromaCrusade/Scripts/ShipEditor/UI/CC.ShipEditor.UI.asmdef
+++ b/Assets/_ChromaCrusade/Scripts/ShipEditor/UI/CC.ShipEditor.UI.asmdef
@@ -6,7 +6,11 @@
         "GUID:8162417b1db43304a8e519f382de0521",
         "GUID:199b28df04ec87c448fb2a39cc36ceca",
         "GUID:da089e7eb1f249a4e8f700287ca818f3",
-        "GUID:e60ee0dd147f198419a7b3016a0b4b50"
+        "GUID:e60ee0dd147f198419a7b3016a0b4b50",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:fd0a12926910c494bb4f6642179608fd",
+        "GUID:035c78fadd13b0b458e6d6939eb4c391",
+        "GUID:de253b478ee584649840e36d6697ae5d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
