--- a/Assets/_ChromaCrusade/Scripts/Shared/UI/CC.Shared.UI.asmdef
+++ b/Assets/_ChromaCrusade/Scripts/Shared/UI/CC.Shared.UI.asmdef
@@ -4,7 +4,10 @@
     "references": [
         "GUID:3838979ef187a084e82a9bd55d5017c6",
         "GUID:da089e7eb1f249a4e8f700287ca818f3",
-        "GUID:bfefc9aef8e33b04fbd8b168d6985215"
+        "GUID:bfefc9aef8e33b04fbd8b168d6985215",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:de253b478ee584649840e36d6697ae5d",
+        "GUID:035c78fadd13b0b458e6d6939eb4c391"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
