--- a/Assets/_ChromaCrusade/Scripts/Core/Utilities/CC.Core.Utilities.asmdef
+++ b/Assets/_ChromaCrusade/Scripts/Core/Utilities/CC.Core.Utilities.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "CC.Core.Utilities"
+    "name": "CC.Core.Utilities",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
