--- a/Assets/_ChromaCrusade/Scripts/ShipEditor/UI/CC.ShipEditor.UI.asmdef
+++ b/Assets/_ChromaCrusade/Scripts/ShipEditor/UI/CC.ShipEditor.UI.asmdef
@@ -10,7 +10,10 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:fd0a12926910c494bb4f6642179608fd",
         "GUID:035c78fadd13b0b458e6d6939eb4c391",
-        "GUID:de253b478ee584649840e36d6697ae5d"
+        "GUID:de253b478ee584649840e36d6697ae5d",
+        "GUID:ebfb28c9f5f123c48aebc2feeee43fc4",
+        "GUID:2844bec5a743f7c43b165bc0feb00ff2",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
